<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Deathless Downloader</string>
    <string name="title_activity_main">Deathless Downloader</string>
    <string name="package_name">com.deathless.downloader</string>
    <string name="custom_url_scheme">com.deathless.downloader</string>
    <string name="url_input_hint">Paste media URL (HTTP/HTTPS)...</string>
    <string name="btn_paste">Paste</string>
    <string name="btn_download">Download</string>
    <string name="chip_video">Video (MP4)</string>
    <string name="chip_audio">Audio (MP3)</string>
    <string name="active_downloads">Downloads</string>
    <string name="empty_downloads_title">No Active Downloads</string>
    <string name="empty_downloads_desc">Paste a video or audio URL above to begin downloading directly to your device.</string>
    <string name="action_pause">Pause</string>
    <string name="action_resume">Resume</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_open">Open File</string>
    <string name="action_retry">Retry</string>
    <string name="action_delete">Delete</string>
    <string name="clear_completed">Clear Completed</string>
</resources>
